addeed validation error to api, refactored Layoutvalidatorservice to collect all messages
