# argos-service-api/api.yml
@@ -889,7 +889,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/Error"
+            $ref: "#/components/schemas/ValidationError"
     Error:
       description: server error
       content:
@@ -1348,5 +1348,23 @@ components:
       required:
         - message
       properties:
+        message:
+          type: string
+    ValidationError:
+      type: object
+      required:
+        - messages
+      properties:
+        messages:
+          type: array
+          items:
+            $ref: "#/components/schemas/ValidationMessage"
+    ValidationMessage:
+      type: object
+      required:
+        - message
+      properties:
+        field:
+          type: string
         message:
           type: string
